<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jof.openplatform</groupId>
	<artifactId>smrs</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<url>http://maven.apache.org</url>

	<properties>
		<console.remoting.version>1.1-SNAPSHOT</console.remoting.version>
		<hop.core.version>2.0.1</hop.core.version>
		<hop.test.version>2.0.1</hop.test.version>
		<console.service.client>2.0.2</console.service.client>
		<spring.version>3.2.2.RELEASE</spring.version>		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<file.encoding>UTF-8</file.encoding>
		<commons-dbcp.version>1.4</commons-dbcp.version>		
	</properties>

	<modules>
		<module>smrs-app</module>
	</modules>

	<name>SMRS 监控中心</name>
	<description>Monitor</description>
	<inceptionYear>2011</inceptionYear>
	<organization>
		<name>SMRS</name>
	</organization>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.2.4</version>
			</dependency>            
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jmock</groupId>
				<artifactId>jmock</artifactId>
				<version>2.6.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jmock</groupId>
				<artifactId>jmock-legacy</artifactId>
				<version>2.6.0-RC2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>jmock</groupId>
				<artifactId>jmock-cglib</artifactId>
				<version>1.2.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit-dep</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>3.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymockclassextension</artifactId>
				<version>3.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-core</artifactId>
				<version>2.3.14</version>
				<exclusions>
					<exclusion>
						<groupId>com.sun</groupId>
						<artifactId>tools</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.1.24</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid</artifactId>
				<version>0.2.16</version>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-json-plugin</artifactId>
				<version>2.3.14</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>3.6.10.Final</version>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-sitemesh-plugin</artifactId>
				<version>2.3.14</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.5</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.7.5</version>
			</dependency>
			<dependency>
				<groupId>opensymphony</groupId>
				<artifactId>sitemesh</artifactId>
				<version>2.4.2</version>
			</dependency>
			<dependency>
				<groupId>com.jgeppert.struts2.jquery</groupId>
				<artifactId>struts2-jquery-plugin</artifactId>
				<version>3.3.1</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.velocity</groupId>
						<artifactId>velocity</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-spring-plugin</artifactId>
				<version>2.3.14</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.dbunit</groupId>
				<artifactId>dbunit</artifactId>
				<version>2.4.9</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>2.1.6</version>
				<exclusions>
					<exclusion>
						<groupId>c3p0</groupId>
						<artifactId>c3p0</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>1.7.2</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>2.2.2</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>jsp-api</artifactId>
				<version>2.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.oracle</groupId>
				<artifactId>ojdbc14</artifactId>
				<version>10.2.0.2</version>
			</dependency>
			<dependency>
				<groupId>com.haier</groupId>
				<artifactId>hop-core</artifactId>
				<version>${hop.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.haier</groupId>
				<artifactId>hop-test</artifactId>
				<version>${hop.test.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>2.6.2</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>3.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.terracotta.quartz</groupId>
				<artifactId>quartz-terracotta</artifactId>
				<version>2.3.1</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.8.3</version>
			</dependency>

			<!-- XStream -->
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>1.4.4</version>
			</dependency>

			<dependency>
				<groupId>xpp3</groupId>
				<artifactId>xpp3_min</artifactId>
				<version>1.1.4c</version>
			</dependency>

			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>3.9</version>
				<exclusions>
					<exclusion>
						<groupId>stax</groupId>
						<artifactId>stax-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>com.haier.openplatform</groupId>
				<artifactId>console-service-client</artifactId>
				<version>${console.service.client}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.struts</groupId>
						<artifactId>struts2-core</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- jira && sonar -->
			<dependency>
				<groupId>org.jvnet.hudson.plugins</groupId>
				<artifactId>jira</artifactId>
				<version>1.35</version>
				<exclusions>
					<exclusion>
						<groupId>org.jvnet.hudson.main</groupId>
						<artifactId>maven-plugin</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.codehaus.sonar</groupId>
				<artifactId>sonar-ws-client</artifactId>
				<version>3.5</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>3.1</version>
			</dependency>
			<!-- jira && sonar -->
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit-dep</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<env>dev</env>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<id>production</id>
			<properties>
				<env>production</env>
			</properties>
		</profile>
		<profile>
			<id>test</id>
			<properties>
				<env>test</env>
			</properties>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<charset>UTF-8</charset>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:PermSize=56m -XX:MaxPermSize=128m</argLine>
					<includes>
						<include>com/haier/**/*Test*.java</include>
					</includes>
					<printSummary>true</printSummary>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<instrumentation>
						<excludes>
							<exclude>com/haier/**/action/**/*.class</exclude>
							<exclude>com/haier/**/webapp/**/*.class</exclude>
							<exclude>com/haier/**/interceptor/**/*.class</exclude>
							<exclude>com/haier/**/taglib/**/*.class</exclude>
							<exclude>com/haier/**/domain/**/*.class</exclude>
							<exclude>com/haier/**/model/**/*.class</exclude>
						</excludes>
					</instrumentation>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<wtpversion>2.0</wtpversion>
					<additionalProjectnatures>
						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
					</additionalProjectnatures>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<repositories>
		<repository>
			<id>local-nexus</id>
			<name>private repository nexus</name>
			<url>http://VPRCSGI1845D:8081/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	
	<!--  
	<pluginRepositories>
		<pluginRepository>
			<id>local-nexus</id>
			<name>private plugin nexus</name>
			<url>http://VPRCSGI1845D:8081/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
   
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Nexus Release Repository</name>
			<url>http://VPRCSGI1845D:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Nexus Snapshot Repository</name>
			<url>http://VPRCSGI1845D:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	-->
	<!-- 
	<repositories> 
		<repository>
			 <snapshots>
			 	 <enabled>false</enabled>
			 </snapshots> 
			<id>central</id> 
			<name>libs-release</name> 
			<url>http://10.135.6.66:8081/artifactory/libs-release</url> 
		</repository> 
		<repository>
			 <snapshots/> 
			 <id>snapshots</id> 
			 <name>libs-snapshot</name> 
		     <url>http://10.135.6.66:8081/artifactory/libs-snapshot</url>
		</repository> 
	</repositories> 
		<pluginRepositories> 
			<pluginRepository> 
			<snapshots> 
				<enabled>false</enabled> 
		    </snapshots> 
		    <id>central</id>
		    <name>plugins-release</name>
		    <url>http://10.135.6.66:8081/artifactory/plugins-release</url> 
		</pluginRepository> 
		<pluginRepository>
		 <snapshots/> 
		 <id>snapshots</id> 
		 <name>plugins-snapshot</name> 
		 <url>http://10.135.6.66:8081/artifactory/plugins-snapshot</url> 
		 </pluginRepository> 
		</pluginRepositories> <distributionManagement> <repository> <id>libs-release-local</id> 
		<name>Team Nexus Release Repository</name> <url>http://10.135.6.66:8081/artifactory/libs-release-local</url> 
		</repository> <snapshotRepository> <id>libs-snapshot-local</id> <name>Team 
		Nexus Snapshot Repository</name> <url>http://10.135.6.66:8081/artifactory/libs-snapshot-local</url> 
		</snapshotRepository> </distributionManagement> 
	-->
</project>